--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <option value="tts">Soal dan Nilai</option>
                 <option value="pilihanganda">Pilihan Ganda</option>
                 <option value="isiansingkat">Isian Singkat</option>
-                <option value="lihatnilai">Nilai</option>
+                <option value="lihatnilai">Kosa Kata</option>
                 <option value="dwn">Download Nilai</option>
             </select>
             
@@ -328,4 +328,5 @@
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
