--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <select id="kelola-mapel">
                 <option value="pd">-- Pilih Data ---</option>
                 <option value="jm">Jurnal mengajar</option>
-                <option value="dk">Data Kehadiran Siswa</option>
+                <option value="dk">Kosa Kata Siswa</option>
                 <option value="cg">Catatan Guru</option>
                 <ooption>Pelanggaran Siswa</ooption>
             </select>
@@ -330,3 +330,4 @@
 </body>
 
 </html>
+
