--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <option value="jm">Jurnal mengajar</option>
                 <option value="dk">Kosa Kata Siswa</option>
                 <option value="cg">Catatan Guru</option>
-                <ooption>Pelanggaran Siswa</ooption>
+                <option value="ps">Pelanggaran Siswa</option>
             </select>
             <br>
             <br>
@@ -330,4 +330,5 @@
 </body>
 
 </html>
+
 
