--- a/index.html
+++ b/index.html
@@ -324,11 +324,12 @@
     </div>
     <div id="smpp">
         <button id="ex-smpp"> X </button>
-        <img id="gbr-smpp" src="smpp.gif">
+        <img id="gbr-smpp" src="https://drive.google.com/file/d/1bDHGKM3RE4Yuk5nywtFVLqB6DQtp67zN/view?usp=sharing">
     </div>
     <script src="index.js"></script>
 </body>
 
 </html>
+
 
 
